--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,9 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.2.0"
+    "firebase-functions": "^4.3.1",
+    "geofire-common": "^6.0.0",
+    "geofirestore": "^5.2.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0"
