--- a/firebase.json
+++ b/firebase.json
@@ -12,6 +12,9 @@
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log"
+      ],
+      "predeploy": [
+        
       ]
     }
   ]
