--- a/functions/package.json
+++ b/functions/package.json
@@ -9,17 +9,17 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.5.0",
+    "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "geofire-common": "^6.0.0",
-    "geofirestore": "^5.2.0"
+    "geofirex": "^0.1.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.0.0"
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
