--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "mocha --reporter spec"
   },
   "engines": {
     "node": "18"
@@ -19,7 +20,11 @@
     "geofirex": "^0.1.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "chai": "^4.3.7",
+    "firebase-functions-test": "^3.1.0",
+    "jest": "^29.5.0",
+    "mocha": "^10.2.0",
+    "sinon": "^15.1.0"
   },
   "private": true
 }
